Integrated login method in the template

--- a/templates/donation.html
+++ b/templates/donation.html
@@ -12,13 +12,9 @@
 </head>
 <body>
     <div class="form-container enabled">
-        <div class="btn-container">
-            <button class="btn disabled login-btn">Login</button>
-            <button class="btn enabled signup-btn">SignUp</button>
-        </div>
         <div class="form-wrapper">
             <form action="login" class="form disabled" method="post" id="login-form">
-                <h1 class="form__title">Login</h1>
+                <h1 class="form__title">New Donation</h1>
     
                 <hr class="form__sep">
     
