Implementing new donation functionalitie

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
         <p>Name : {{ user["name"] }}</p>
         <p>FirstName : {{ user["first_name"] }}</p>
     {% endif %}
-    <a href="login-form">Login</a>
-    <a href="donation">Donation</a>
+    <a href="login-form">Login</a> <br>
+    <a href="donation-form">Donation</a> <br>
+    <a href="prediction-form">Prediction</a> <br>
 </body>
 </html>
