Changing get_loan() method to Loan class

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,5 +15,7 @@
     <a href="login-form">Login</a> <br>
     <a href="donation-form">Donation</a> <br>
     <a href="prediction-form">Prediction</a> <br>
+    <a href="donations">Donations</a> <br>
+    <a href="loans">Loans Prediction</a> <br>
 </body>
 </html>
