--- a/templates/prediction-form.html
+++ b/templates/prediction-form.html
@@ -13,7 +13,7 @@
 <body>
     <div class="form-container enabled">
         <div class="form-wrapper">
-            <form action="donation" class="form enabled" method="post" id="login-form">
+            <form action="prediction" class="form enabled" method="post" id="login-form">
                 <h1 class="form__title">New Prediction</h1>
     
                 <hr class="form__sep">
@@ -29,7 +29,7 @@
                     <div class="form__input vertical">
                         <label for="request_date" class="form__label">Request Date :</label>
     
-                        <input type="date" name="request_date" id="request_date" class="form__input-field" value="" placeholder=""/>
+                        <input type="datetime-local" name="request_date" id="request_date" class="form__input-field" value="" placeholder=""/>
                     </div>
                 </div>
     
